[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "langchain>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-google-vertexai>=3.0.2",
    "langgraph>=1.0.2",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
]
